--- a/editor/package.json
+++ b/editor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-react-app",
+  "name": "video-data-editor",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
