--- a/editor/package.json
+++ b/editor/package.json
@@ -13,9 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
-    "bson": "^5.4.0",
+    "axios": "^1.4.0",
     "electron": "^10.1.2",
-    "node-static": "^0.7.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^8.1.1",
