--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-player": "^2.12.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
+    "react-router-loading": "^1.0.2",
     "react-scripts": "5.0.1",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
